// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Toolbar
    className=""
    container="parent"
    direction="column"
    key=".0"
    onClose={null}
    onOpen={null}
    opacity={1}
    opened={false}
    position="left-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
<Default__StyledSpan>
  <Toolbar
    className=""
    container="parent"
    direction="column"
    key=".0"
    onClose={null}
    onOpen={null}
    opacity={1}
    opened={false}
    position="left-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the opened prop 1`] = `
<Default__StyledSpan>
  <Toolbar
    className=""
    container="parent"
    direction="column"
    key=".0"
    onClose={null}
    onOpen={null}
    opacity={1}
    opened={true}
    position="left-top"
    shape=""
    size=""
  >
    <div />
  </Toolbar>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<Default__StyledSpan>
  <Toolbar
    className=""
    container="parent"
    direction="column"
    key=".0"
    onClose={null}
    onOpen={null}
    opacity={1}
    opened={false}
    position="left-top"
    shape="square"
    size=""
  >
    <div />
  </Toolbar>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<Default__StyledSpan>
  <Toolbar
    className=""
    container="parent"
    direction="column"
    key=".0"
    onClose={null}
    onOpen={null}
    opacity={1}
    opened={false}
    position="left-top"
    shape=""
    size="xs"
  >
    <div />
  </Toolbar>
</Default__StyledSpan>
`;
